<package format="3">
  <name>zlib_point_cloud_transport</name>
  <version>1.0.11</version>
  <description>
    zlib_point_cloud_transport provides a plugin to point_cloud_transport for sending point clouds
    encoded with zlib
  </description>
  <author>Jakub Paplham</author>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ctu-vras/draco_point_cloud_transport</url>
  <url type="website">https://wiki.ros.org/draco_point_cloud_transport</url>
  <url type="bugtracker">https://github.com/ctu-vras/draco_point_cloud_transport/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pluginlib</build_depend>

  <exec_depend>pluginlib</exec_depend>

  <depend>point_cloud_interfaces</depend>
  <depend>point_cloud_transport</depend>
  <depend>rclcpp</depend>
  <depend>zlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
