<package format="3">
  <name>point_cloud_transport_plugins</name>
  <version>1.0.11</version>
  <description>Metapackage with common point_cloud_transport plugins</description>
  <author>Jakub Paplham</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ctu-vras/point_cloud_transport_plugins</url>
  <url type="website">https://wiki.ros.org/point_cloud_transport</url>
  <url type="bugtracker">https://github.com/ctu-vras/point_cloud_transport_plugins/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>draco_point_cloud_transport</exec_depend>
  <exec_depend>point_cloud_interfaces</exec_depend>
  <exec_depend>zlib_point_cloud_transport</exec_depend>
  <exec_depend>zstd_point_cloud_transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
